# codeforge-ai

./: .gitignore  README.md
backend/: pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx  ProtectedRoute.jsx  README.md
frontend/src/components/: FeatureCard.jsx  FeaturesSection.jsx  Footer.jsx  HeroSection.jsx  LoadingSpinner.jsx  Navbar.jsx  OrDivider.jsx  WhatsApp.jsx
frontend/src/components/ui/: card.jsx  select.jsx
frontend/src/pages/: ChallengeGenerator.jsx  ChallengeHistory.jsx  ChallengesHistory.jsx  ContactPage.jsx  LandingPage.jsx  Layout.jsx  NotFoundPage.jsx  Thanks.jsx
frontend/src/pages/styles/: thanks.css
